Fri Dec  5 11:12:11 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (free_rp): New function.
	(redirect): Improved logic for yesterday's change, including
	use of free_rp.
	(close_redir): Use free_rp.

Thu Dec  4 22:35:05 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (redirect): Only put the new struct redirect into
	the list if the file or pipe could actually be opened. Fixes
	a bug with the wrong return value of close, noticed by
	Seb <sbb@tuxfamily.org>.
	* dfa.c (parse_bracket_exp_mb): Don't zero out work_mbc->chars
	after we malloc'ed it. Fixes a leak found by valgrind when
	using UTF-8.  (Hmmm. This got fixed in January 2007; It seems
	to have crept back into the code in the August 2007 merge with
	GNU grep. Sigh.)

Mon Oct 20 11:47:59 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* configure.ac: Add -g3 and -gdwarf-2 to CFLAGS if compiling with
	GCC and doing development. Should have done this ages ago.

Sun Aug 31 22:03:55 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (set_BINMODE): Tighten up the code to even more so
	that it matches the documentation.

Mon Aug 25 22:41:47 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (set_BINMODE): Tighten up the code to only allow
	certain reasonable values when setting BINMODE.

Fri Aug 22 14:43:49 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c (nextfile): Users Strong In The Ways Of The Source can use
	non-existant files on the command line without it being a fatal error.

Wed Jul 30 23:10:51 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* re.c (research): Don't ever use DFA if need_start. It can
	break on some weird cases.  Reported by
	 "T. X. G." <leopardie333@yahoo.com>.

Wed Jul 30 22:27:20 2008  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (do_match): Add MAYBE_NUM flag to elements of array
	created by `match' since data could come from user. Similar
	semantics to `split'. Thanks to Dr. Dirk Zimoch <dirk.zimoch@psi.ch>
	for reporting the bug.
