@@ -359,6 +359,8 @@ EXTRA_DIST = \
 	mbprintf1.ok \
 	mbprintf2.awk \
 	mbprintf2.ok \
+	mbstr1.awk \
+	mbstr1.ok \
 	membug1.awk \
 	membug1.in \
 	membug1.ok \
@@ -734,7 +736,7 @@ UNIX_TESTS = fflush getlnhd localenl pid pipeio1 pipeio2 poundbang space strftln
 GAWK_EXT_TESTS = argtest asort asorti backw badargs binmode1 clos1way devfd devfd1 devfd2 double1 double2 \
 	fieldwdth funlen fsfwfs fwtest fwtest2 gensub gensub2 gnuops2 gnuops3 gnureops icasefs \
 	icasers igncdym igncfs ignrcase ignrcas2 lint lintold match1 match2 match3 manyfiles \
-	mbfw1 mbprintf1 mbprintf2 \
+	mbfw1 mbprintf1 mbprintf2 mbstr1 \
 	nondec nondec2 posix procinfs printfbad1 regx8bit rebuf reint reint2 rsstart1 \
 	rsstart2 rsstart3 rstest6 shadow sort1 strtonum strftime whiny
 
@@ -1434,6 +1436,13 @@ gsubtst6::
 	@echo $@
 	@GAWKLOCALE=C ; $(AWK) -f $(srcdir)/$@.awk > _$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+mbstr1::
+	@echo $@
+	@[ -z "$$GAWKLOCALE" ] && GAWKLOCALE=en_US.UTF-8; \
+	AWKPATH=$(srcdir) $(AWK) -f $@.awk  >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
 
 # Targets generated for other tests:
 
