@@ -1,3 +1,8 @@
+Thu Dec 11 21:36:11 2008  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (mbstr1): New test.
+	* mbstr1.awk, mbstr1.ok: New files.
+
 Thu Dec  4 22:44:39 2008  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (closebad): New test.
